[package]
name = "osr-rs"
version = "0.1.0"
edition = "2021"
authors = ["remeliah <anoletenu@gmail.com>"]
description = "rust library for osu! replay writer/parser."
license = "MIT"
readme = "README.md"
repository = "https://github.com/remeliah/osr-rs"
keywords = ["rust", "osu", "replay-parser"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lzma-rs = "0.3"
chrono = "0.4"
thiserror = "2"
